aks-zone-demo/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: app
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: app
      nodeSelector:
        "kubernetes.io/os": linux
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      containers:
      - name: app
        image: acrbhtd5n7yqx7fm.azurecr.io/zone-info:v0.0.7
        ports:
        - containerPort: 8080
          name: web
        imagePullPolicy: Always
        resources:
          requests: 
            cpu: '0.25'
            memory: '250Mi'
          limits:
            cpu: '0.5'
            memory: '590Mi'
---
apiVersion: v1
kind: Service
metadata:
  name: zonal
spec:
  selector:
    app: app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
