aks-zone-demo/manifests/pvc-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pvc-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pvc-app
  template:
    metadata:
      labels:
        app: pvc-app
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: pvc-app
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: pvc-app
      nodeSelector:
        "kubernetes.io/os": linux
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      containers:
      - name: pvc-app
        image: acrbhtd5n7yqx7fm.azurecr.io/zone-info:v0.0.7
        ports:
        - containerPort: 8080
          name: web
        volumeMounts:
        - name: zrs-volume
          mountPath: /mnt
        imagePullPolicy: Always
        resources:
          requests: 
            cpu: '0.25'
            memory: '250Mi'
          limits:
            cpu: '0.5'
            memory: '590Mi'
      volumes:
      - name: zrs-volume
        persistentVolumeClaim:
          claimName: azure-managed-disk
---
apiVersion: v1
kind: Service
metadata:
  name: zonal-pvc
spec:
  selector:
    app: pvc-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
